--- a/src/GUI/Player/GUI_Player.ui
+++ b/src/GUI/Player/GUI_Player.ui
@@ -795,7 +795,7 @@
            <number>2</number>
           </property>
           <item row="1" column="3">
-           <widget class="QLabel" name="maxTime">
+           <widget class="QLabel" name="lab_max_time">
             <property name="minimumSize">
              <size>
               <width>50</width>
@@ -823,7 +823,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLabel" name="curTime">
+           <widget class="QLabel" name="lab_cur_time">
             <property name="minimumSize">
              <size>
               <width>50</width>
@@ -896,10 +896,16 @@
           <item row="0" column="1" colspan="3">
            <widget class="QStackedWidget" name="progress_widget">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>5</height>
+             </size>
             </property>
             <property name="lineWidth">
              <number>0</number>
@@ -954,6 +960,9 @@
                 </property>
                 <property name="value">
                  <number>-1</number>
+                </property>
+                <property name="textVisible">
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -1010,6 +1019,7 @@
     <addaction name="separator"/>
     <addaction name="action_Dark"/>
     <addaction name="action_Fullscreen"/>
+    <addaction name="action_logger"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -1112,6 +1122,11 @@
   <action name="action_donate">
    <property name="text">
     <string>Donate</string>
+   </property>
+  </action>
+  <action name="action_logger">
+   <property name="text">
+    <string>Log</string>
    </property>
   </action>
  </widget>
