--- a/src/GUI/InfoDialog/GUI_Lyrics.ui
+++ b/src/GUI/InfoDialog/GUI_Lyrics.ui
@@ -87,7 +87,7 @@
         </sizepolicy>
        </property>
        <property name="suffix">
-        <string>%</string>
+        <string notr="true">%</string>
        </property>
        <property name="minimum">
         <number>50</number>
