--- a/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
+++ b/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
@@ -110,6 +110,13 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="0" colspan="3">
+    <widget class="QLabel" name="lab_warning">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
